more blanding of sandbox

--- a/views/about.jade
+++ b/views/about.jade
@@ -6,9 +6,11 @@
         li: a(href='/') Home
         li.active: a(href='/about') About
 .container
-  h2 About Express Coffee2 Template
+  h2 About Template
   .well
     h3 
-      | Express Coffee 2 was created
-      | to reduce the friction of getting
-      | up and going on express and coffee-script.
+      | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+      | eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      | Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      | Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
