--- a/views/index.jade
+++ b/views/index.jade
@@ -7,18 +7,20 @@
         li: a(href='/about') About
 
 .container
-  h2 Express Coffee2 Template
+  h2 Lorem ipsum dolor sit amet
   p 
-    | Express Coffee 2 is a project skeleton to get
-    | started building expressjs web applications
-    | using coffeescript.
+    | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+    | eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    | Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+    | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+    | Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   h2 Features
   ul
-    li HTML 5 Shim
-    li Twitter Bootstrap CSS
-    li JQuery 1.6.4
-    li Cloud9 Ready
-    li No Compiling
+    li lorem ipsum dolor
+    li lorem ipsum dolor
+    li lorem ipsum dolor
+    li lorem ipsum dolor
+    li lorem ipsum dolor
     
     
  
