adding a test libs and some facebook.coffee test

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@
 
 .container
   h2 Lorem ipsum dolor sit amet
+  h3=cs_value
   p 
     | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
     | eiusmod tempor incididunt ut labore et dolore magna aliqua. 
