working redirect auth pattern

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,7 @@
 .container
   h2 Lorem ipsum dolor sit amet
   h3=cs_value
+  a(href='/auth') login
   p 
     | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
     | eiusmod tempor incididunt ut labore et dolore magna aliqua. 
